<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDmbA2Mh2khtcHy3B4WLjFEWNgYxkrSYPI
    </string>

    <string name="app_name">PelnyMagazynek</string>
    <string name="title_activity_warehouses">Pełny Magazynek</string>

    <string name="loginTab">Zaloguj się</string>
    <string name="registerTab">Rejestracja</string>
    <string name="loginButton">Zaloguj się</string>
    <string name="passwordText">Hasło</string>

    <string name="registrationFirstName">Imię</string>
    <string name="registrationLastName">Nazwisko</string>
    <string name="registrationEmail">E-mail</string>
    <string name="registrationPassword">Hasło</string>
    <string name="registrationPasswordConfirm">Potwierdź Hasło</string>
    <string name="registrationButton">Zarejestruj</string>

    <string name="authorizationFailRelog">Błąd autoryzacji. Zaloguj się ponownie</string>
    <string name="newWarehouseAPICallFailure">Błąd dodawania, spróbuj ponownie</string>

    <string name="warehousesAll">Wszystkie</string>
    <string name="warehousesAdmin" tools:ignore="Typos">Autor</string>
    <string name="warehousesEditor">Edytor</string>
    <string name="warehousesWatcher">Obserwator</string>
    <string name="nothing_to_show">Brak elementów</string>
    <string name="newWarehouse">Nowy magazyn</string>
    <string name="editWarehouse">Nowa nazwa</string>
    <string name="name">Nazwa</string>
    <string name="nameTaken">Nazwa niepoprawna bądź zajęta</string>
    <string name="ContextMenuTitle">Wybierz opcję</string>
    <string name="warehousesEditName">Edytuj nazwę</string>
    <string name="optionDelete">Usuń</string>
    <string name="optionOpen">Otwórz</string>
    <string name="itemEdit">Edytuj</string>
    <string name="userEdit">Zmień uprawnienia</string>
    <string name="wrongPrivileges">Brak uprawnień</string>
    <string name="itemsShortageTabTitle">Brak</string>
    <string name="itemsLowQuantityTitle">Kończące się</string>
    <string name="itemaAll">Wszystkie</string>
    <string name="itemsEditName">Edytuj</string>
    <string name="title_activity_items">Lista przedmiotów</string>
    <string name="addItemMenuItem">Dodaj przedmiot</string>
    <string name="addItemFabButton">Dodaj przedmiot</string>
    <string name="barcodeFabButton">Skanuj kod kreskowy</string>
    <string name="qrFabButton">Skanuj kod QR</string>
    <string name="manageUsersFabButton">Użytkownicy</string>
    <string name="deleteAlertTitle">Usuwanie</string>
    <string name="deleteAlertMessage">Czy na pewno chcesz usunąć ten wpis?</string>
    <string name="yes">Tak</string>
    <string name="cancel">Anuluj</string>
    <string name="itemOpen">Otwórz</string>
    <string name="apiCallFailed">Wystąpił błąd, spróbuj ponownie</string>
    <string name="succesRemove">Usunięto</string>
    <string name="title_activity_users">Użytkownicy</string>
    <string name="warehouse">Magazyn</string>
    <string name="role">Rola</string>
    <string name="userEmail">E-mail użytkownika</string>
    <string name="userEmailWarning">Brak adresu e-mail!</string>
    <string name="radioButtonWarning">Wybierz rolę!</string>
    <string name="userExistsInWarehouse">Użytkownik już istnieje!</string>
    <string name="userNotFound">Nie znaleziono użytkownika</string>
    <string name="itemName">Nazwa przedmiotu</string>
    <string name="itemQuantity">Ilość</string>
    <string name="itemTitle">Przedmiot</string>
    <string name="itemActivityTitle">Przedmiot</string>
    <string name="badRequest">Błąd zapytania, powiadom autora.</string>
    <string name="noComments">Brak komentarza</string>
    <string name="targetQuantityTitle">Docelowa ilość:</string>
    <string name="minQuantityTitle">Minimalna ilość:</string>
    <string name="qrCodeTitle">Kod QR:</string>
    <string name="barcodeTitle">Kod kreskowy:</string>
    <string name="gpsTitle">Lokalizacja:</string>
    <string name="commentsTitle">Komentarz:</string>
    <string name="notSet">brak</string>
    <string name="itemEditTitle">Edytuj przedmiot</string>
    <string name="add">dodaj</string>
    <string name="show">wyświetl</string>
    <string name="itemNewTitle">Nowy przedmiot</string>
    <string name="change">zmień</string>
    <string name="itemExistsInWarehouse">There is already an item with same name</string>
    <string name="nameFieldMandatoryNewItem">Nazwa jest obowiązkowa</string>
    <string name="quantityFieldMandatoryNewItem">Podaj liczebność przedmiotu</string>
    <string name="someoneHasUpdated">Ktoś aktualizował przedmiot, spróbuj raz jeszcze</string>
    <string name="scannerCancelled">Anulowano skanowanie</string>
    <string name="scannerSuccess">Zeskanowano</string>
    <string name="added">dodano</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="gspYouAreHere">Jesteś tutaj!</string>
    <string name="acceptOnMap">Użyj</string>
    <string name="gpsCancelled">Przerwano pobieranie lokalizacji</string>
    <string name="back">Wróć</string>
    <string name="showOnMapActivityTitle">Mapa</string>
    <string name="itemNotFound">Nie znaleziono przedmiotu</string>
    <string name="codeTaken">Kod zajęty przez przedmiot o nazwie</string>
    <string name="email">E-mail</string>
    <string name="noWarehouses">Dodaj pierwszy magazyn!</string>

</resources>
