<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLightRed"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/closeNewUserBottomSheet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close_white_48dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp" />

    <ImageView
        android:id="@+id/addNewUserBottomSheet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_done_white_48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/emailText"
        android:text="E-Mail"
        android:layout_below="@+id/addNewUserBottomSheet"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/userEmail"
        android:layout_below="@+id/emailText"
        android:hint="@string/userEmail"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/roleText"
        android:text="@string/role"
        android:layout_below="@+id/userEmail"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/roleText">

        <RadioButton
            android:id="@+id/radioEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="10dp"
            android:buttonTint="@android:color/white"
            android:text="@string/warehousesEditor"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioWatcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="10dp"
            android:buttonTint="@android:color/white"
            android:text="@string/warehousesWatcher"
            android:textColor="@android:color/white" />
    </RadioGroup>

</RelativeLayout>