<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutItemNew"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Item.ItemNew">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/AppBarLayoutItemNew"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/itemNew_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/itemNewNameTitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemNew_toolbar"
            android:layout_marginLeft="72dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/itemName"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/itemNewNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemNewTitleHeader"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="52dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/itemNewQuantityTitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemNewNameHeader"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/itemQuantity"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/itemNewQuantityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemNewQuantityTitleHeader"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:hint="0"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/md_keylines">

            <LinearLayout
                android:id="@+id/itemNewRow1"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="232dp">

                <TextView
                    android:id="@+id/targetQuantityIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/target_quantity_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/targetQuantityTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/targetQuantityTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <EditText
                    android:id="@+id/targetQuantityValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:hint="@string/notSet"
                    android:inputType="number"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->
            <LinearLayout
                android:id="@+id/itemNewRow2"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/itemNewRow1">

                <TextView
                    android:id="@+id/minQuantityIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/min_quantity_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/minQuantityTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/minQuantityTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <EditText
                    android:id="@+id/minQuantityValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:hint="@string/notSet"
                    android:inputType="number"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->
            <LinearLayout
                android:id="@+id/itemNewRow3"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/itemNewRow2">

                <TextView
                    android:id="@+id/qrCodeIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/qr_code_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/qrCodeTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/qrCodeTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <TextView
                    android:id="@+id/qrCodeValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/add"
                    android:textStyle="bold"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->
            <LinearLayout
                android:id="@+id/itemNewRow4"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/itemNewRow3">

                <TextView
                    android:id="@+id/barcodeIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/barcode_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/barcodeTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/barcodeTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <TextView
                    android:id="@+id/barcodeValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/add"
                    android:textStyle="bold"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->
            <LinearLayout
                android:id="@+id/itemNewRow5"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/itemNewRow4">

                <TextView
                    android:id="@+id/gpsIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/gps_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/gpsTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/gpsTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <TextView
                    android:id="@+id/gpsValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/add"
                    android:textStyle="bold"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->
            <LinearLayout
                android:id="@+id/itemNewRow6"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/itemNewRow5">

                <TextView
                    android:id="@+id/commentsIconItemNew"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/comments_icon"
                    android:elevation="6dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/commentsTitleItemNew"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:text="@string/commentsTitle"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/article_subheading" />

                <EditText
                    android:id="@+id/commentsValueItemNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:hint="@string/notSet"
                    android:textSize="@dimen/article_subheading" />
            </LinearLayout>
            <!--         DIVIDER            -->


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="12dp"
        android:layout_marginTop="224dp"
        android:src="@drawable/ic_done_black_24dp"
        android:visibility="visible"
        fab:fab_colorNormal="#FFFFFF"
        fab:fab_colorPressed="#EEEEEE"
        fab:fab_colorRipple="#DDDDDD"
        fab:fab_elevationCompat="6dp"
        fab:fab_shadowColor="#000"
        fab:fab_size="mini" />

</android.support.design.widget.CoordinatorLayout>